test_regress/t/t_tagged_union.out
%Error-UNSUPPORTED: t/t_tagged_union.v:24:18: Unsupported: tagged union
   24 |    typedef union tagged {
      |                  ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_tagged_union.v:25:7: Unsupported: void (for tagged unions)
   25 |       void Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:31:18: Unsupported: tagged union
   31 |    typedef union tagged packed {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:32:7: Unsupported: void (for tagged unions)
   32 |       void          Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:52:18: Unsupported: tagged union
   52 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:53:7: Unsupported: void (for tagged unions)
   53 |       void           Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:60:18: Unsupported: tagged union
   60 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:64:13: Unsupported: tagged union
   64 |       union tagged {
      |             ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:74:18: Unsupported: tagged union
   74 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:75:7: Unsupported: void (for tagged unions)
   75 |       void    Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:80:18: Unsupported: tagged union
   80 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:81:7: Unsupported: void (for tagged unions)
   81 |       void      Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:89:18: Unsupported: tagged union
   89 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:90:7: Unsupported: void (for tagged unions)
   90 |       void      Invalid;
      |       ^~~~
%Warning-SHORTREAL: t/t_tagged_union.v:92:7: Unsupported: shortreal being promoted to real (suggest use real instead)
   92 |       shortreal ShortRealVal;
      |       ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Error-UNSUPPORTED: t/t_tagged_union.v:96:18: Unsupported: tagged union
   96 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:97:7: Unsupported: void (for tagged unions)
   97 |       void   Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:102:18: Unsupported: tagged union
  102 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:103:7: Unsupported: void (for tagged unions)
  103 |       void  Invalid;
      |       ^~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:108:18: Unsupported: tagged union
  108 |    typedef union tagged {
      |                  ^~~~~~
%Error-UNSUPPORTED: t/t_tagged_union.v:109:7: Unsupported: void (for tagged unions)
  109 |       void  Invalid;
      |       ^~~~
%Error: t/t_tagged_union.v:127:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  127 |       vi1 = tagged Invalid;
      |             ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_union.v:128:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  128 |       vi2 = tagged Invalid;
      |             ^~~~~~
%Error: t/t_tagged_union.v:131:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  131 |       vi1 = tagged Valid (42);
      |             ^~~~~~
%Error: t/t_tagged_union.v:134:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  134 |       vi2 = tagged Valid (23 + 34);
      |             ^~~~~~
%Error: t/t_tagged_union.v:138:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  138 |       mt = tagged Invalid;
      |            ^~~~~~
%Error: t/t_tagged_union.v:140:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  140 |       mt = tagged IntVal (32'h12345678);
      |            ^~~~~~
%Error: t/t_tagged_union.v:143:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  143 |       mt = tagged ShortVal (16'hABCD);
      |            ^~~~~~
%Error: t/t_tagged_union.v:146:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  146 |       mt = tagged ByteVal (8'h5A);
      |            ^~~~~~
%Error: t/t_tagged_union.v:149:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  149 |       mt = tagged BitVal (1'b1);
      |            ^~~~~~
%Error: t/t_tagged_union.v:153:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  153 |       mt = tagged Byte8NonZeroLSB (8'hA5);
      |            ^~~~~~
%Error: t/t_tagged_union.v:156:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  156 |       mt = tagged Word16NonZeroLSB (16'h1234);
      |            ^~~~~~
%Error: t/t_tagged_union.v:160:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  160 |       mt = tagged Word32LittleEndian (32'hDEADBEEF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:163:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  163 |       mt = tagged Word16LittleEndian (16'hCAFE);
      |            ^~~~~~
%Error: t/t_tagged_union.v:167:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  167 |       mt = tagged Wide60 (60'hFEDCBA987654321);
      |            ^~~~~~
%Error: t/t_tagged_union.v:170:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  170 |       mt = tagged Wide60NonZeroLSB (60'h123456789ABCDEF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:173:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  173 |       mt = tagged Wide60LittleEndian (60'hABCDEF012345678);
      |            ^~~~~~
%Error: t/t_tagged_union.v:177:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  177 |       mt = tagged Wide90 (90'hFF_FFFFFFFF_FFFFFFFF_FFFF);
      |            ^~~~~~
%Error: t/t_tagged_union.v:180:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  180 |       mt = tagged Wide90NonZeroLSB (90'hDE_ADBEEFCA_FEBABE12_3456);
      |            ^~~~~~
%Error: t/t_tagged_union.v:183:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  183 |       mt = tagged Wide90LittleEndian (90'h11_11111122_22222233_3333);
      |            ^~~~~~
%Error: t/t_tagged_union.v:187:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  187 |       at = tagged Invalid;
      |            ^~~~~~
%Error: t/t_tagged_union.v:189:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  189 |       at = tagged Scalar (999);
      |            ^~~~~~
%Error: t/t_tagged_union.v:192:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  192 |       at = tagged UnpackedArr '{100, 200, 300, 400};
      |            ^~~~~~
%Error: t/t_tagged_union.v:198:12: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  198 |       at = tagged UnpackedArr2D '{'{32'hA, 32'hB, 32'hC}, '{32'hD, 32'hE, 32'hF}};
      |            ^~~~~~
%Error: t/t_tagged_union.v:207:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  207 |       instr = tagged Add '{5'd1, 5'd2, 5'd3};
      |               ^~~~~~
%Error: t/t_tagged_union.v:213:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  213 |       instr = tagged Add '{reg2:5'd10, regd:5'd20, reg1:5'd5};
      |               ^~~~~~
%Error: t/t_tagged_union.v:219:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  219 |       instr = tagged Jmp (tagged JmpU 10'd512);
      |               ^~~~~~
%Error: t/t_tagged_union.v:223:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  223 |       instr = tagged Jmp (tagged JmpC '{2'd1, 10'd256});
      |               ^~~~~~
%Error: t/t_tagged_union.v:228:15: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  228 |       instr = tagged Jmp (tagged JmpC '{cc:2'd3, addr:10'd100});
      |               ^~~~~~
%Error: t/t_tagged_union.v:233:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  233 |       cht = tagged Invalid;
      |             ^~~~~~
%Error: t/t_tagged_union.v:234:13: syntax error, unexpected tagged, expecting IDENTIFIER-for-type
  234 |       cht = tagged Handle (null);
      |             ^~~~~~
%Error: Exiting due to
